--- a/owncloudApp/src/main/res/values-pl/strings.xml
+++ b/owncloudApp/src/main/res/values-pl/strings.xml
@@ -519,4 +519,6 @@
   <string name="welcome_feature_4_title">Wrzucanie kamery</string>
   <string name="welcome_feature_4_text">Automatyczne wysyłanie twoich zdjęć oraz wideo </string>
   <string name="welcome_feature_5_text">Odtwarzaj twoje pliki wideo bez pobierania</string>
+  <string name="no_borwser_installed_alert">Przeglądarka nie jest zainstalowana. Zainstaluj przeglądarkę by umożliwić bezpieczne logowanie.</string>
+  <string name="common_not_found">nie znaleziono</string>
 </resources>
