--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -76,6 +76,7 @@
   <string name="illegal_argument_exception_message">Eine gültige AKTION wird zur Weitergabe benötigt</string>
   <string name="recommend_subject">Probiere %1$s auf Deinem Smartphone!</string>
   <string name="recommend_text">Ich möchte Dich zum Benutzen von %1$s auf Deinem Smartphone einladen!\nLade es hier herunter: %2$s</string>
+  <string name="error_reason">weil</string>
   <string name="auth_failure_snackbar">Authentifizierung fehlgeschlagen</string>
   <string name="auth_failure_snackbar_action">Konto ändern</string>
   <string name="auth_oauth_failure_snackbar_action">Einloggen</string>
@@ -134,6 +135,7 @@
   <string name="common_error">Fehler</string>
   <string name="common_loading">Lade…</string>
   <string name="common_unknown">unbekannt</string>
+  <string name="common_error_unknown">Unbekannter Fehler</string>
   <string name="common_pending">Ausstehend</string>
   <string name="common_important">Wichtig</string>
   <string name="about_title">Über</string>
